--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ p {
   outline: 0;
   vertical-align: baseline;
   font-family: 'rubikregular';
-  scrollbar-width: none;
+  /* scrollbar-width: none; */
 }
 
 iframe {
@@ -44,9 +44,9 @@ iframe {
 
 }
 
-body::-webkit-scrollbar {
+/* body::-webkit-scrollbar {
   display: none;
-}
+} */
 
 html {
   text-rendering: optimizeLegibility;
@@ -71,21 +71,16 @@ a {
 }
 
 a:hover {
-  text-decoration: none;
   color: inherit;
   cursor: ne-resize;
 }
 
-h3 {
+h3{
   margin: 7px;
   color: var(--highlight);
   text-align: center;
 }
 
-
-p {
-  margin-bottom: var(--spacing-s);
-}
 
 /* -----------------------------------
 SCREEN HOME
@@ -96,15 +91,17 @@ SCREEN HOME
   z-index: 2;
   position: relative;
   display: inline-block;
-  -webkit-backdrop-filter: blur(8px) saturate(100%);
-  backdrop-filter: blur(8px) saturate(100%);
-  background-color: #fffafa69;
   margin-bottom: calc(var(--vh, 1vh) * 100);
   bottom: 0;
   border-radius: 0 0 20px 20px;
   -webkit-transition: all .5s cubic-bezier(.55, 0, .07, 1);
   -o-transition: all .5s cubic-bezier(.55, 0, .07, 1);
   transition: all .5s cubic-bezier(.55, 0, .07, 1);
+  
+  background-color: #fffafa69;
+  -webkit-backdrop-filter: blur(30px) saturate(200%);
+          backdrop-filter: blur(30px) saturate(200%);
+background-color: #fffafa4a;
 }
 
 .screen-up {
@@ -198,6 +195,10 @@ MENU
   text-align: center;
   font-size: 1rem;
 
+  -webkit-transition: var(--tran-short);
+
+  -o-transition: var(--tran-short);
+
   transition: var(--tran-short);
   outline: none;
 
@@ -263,6 +264,8 @@ MENU
   z-index: 2;
   position: absolute;
   left: 45px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
 }
 
@@ -353,7 +356,9 @@ MAIL STUFF
   width: 80%;
   text-align: center;
   background-color: dodgerblue;
-  transform: translateY(-100%);
+  -webkit-transform: translateY(-100%);
+      -ms-transform: translateY(-100%);
+          transform: translateY(-100%);
   position: relative;
   color: black;
   font-size: var(--font-normal);
@@ -361,13 +366,22 @@ MAIL STUFF
 }
 
 .mailappear {
-  transform: translateY(0%) !important;
-  box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.5);
+  -webkit-transform: translateY(0%) !important;
+      -ms-transform: translateY(0%) !important;
+          transform: translateY(0%) !important;
+  -webkit-box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.5);
+          box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.5);
+  -webkit-transition: all .5s ease-in-out;
+  -o-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
 }
 
 .mailexit {
-  transform: translate(-50%, 80%);
+  -webkit-transform: translate(-50%, 80%);
+      -ms-transform: translate(-50%, 80%);
+          transform: translate(-50%, 80%);
+  -webkit-transition: all .5s ease-in-out;
+  -o-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
 }
 
@@ -375,28 +389,14 @@ MAIL STUFF
 /* -----------------------------------
 NOW
 -------------------------------------- */
-.now {
-  margin: auto;
-  color: black;
-  width: 700px;
-}
-
-.now a {
-  text-decoration: underline;
-  -webkit-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-}
-
-.now a:hover {
-  cursor: ne-resize;
-  background-color: var(--plus);
-}
 
 ul {
-  padding-inline-start: 20px;
-  margin-block-start: 5px;
-  margin-block-end: 20px;
+  -webkit-padding-start: 20px;
+          padding-inline-start: 20px;
+  -webkit-margin-before: 5px;
+          margin-block-start: 5px;
+  -webkit-margin-after: 20px;
+          margin-block-end: 20px;
 }
 
 h5 {
@@ -404,42 +404,11 @@ h5 {
   padding: 0;
 }
 
-.blockTitle {
-  width: 100%;
-  grid-column: 1 / 5;
-  border-radius: 67px;
-  background-color: snow;
-  color: black;
-  /* box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.25); */
-  padding: var(--spacing-s);
-  text-align: center;
-  text-transform: uppercase;
-  /* backdrop-filter: blur(8px) saturate(100%); */
-  /* background-color: #fffafa69; */
-  /* position: sticky; */
-  /* top: 0; */
-  /* z-index: 99; */
-}
 
 /* -----------------------------------
 PROJETS HOME
 -------------------------------------- */
-h2 {
-  margin: 0;
-  padding: 1px;
-  text-align: center;
-  font-size: .8rem;
-  border-radius: 10px 10px 0 0;
-  text-transform: capitalize;
-}
-
-.block h2 {
-  box-shadow: 0px 0px 10px hsla(0, 0%, 0%, 0.1);
-  z-index: 99;
-}
-
 .back {
-  padding: 100px 0 50px 0;
   background-color: var(--white);
   color: black;
   display: grid;
@@ -450,64 +419,146 @@ h2 {
   height: 100vh;
 }
 
+.text a:hover {
+    cursor: ne-resize;
+    background-color: greenyellow;
+}
+
+.text a {
+  text-decoration: underline;
+}
+
 .grid {
   display: grid;
-  justify-items: center;
-  row-gap: 2rem;
-  /*! grid-template-columns: 1fr 1fr 1fr 1fr; */
-  /*! overflow: scroll; */
+  grid-template-columns: repeat(auto-fill, minmax(min(250px, 100%), 1fr));
+  gap: 0;
+  background-color: gray;
+}
 
+.grid div {
+  -webkit-box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.5);
+          box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.5);
+}
+
+.grid>div:hover {
+  -webkit-box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.5);
+          box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.5);
+  z-index: 99;
+}
+
+.blockTitle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: var(--spacing-m);
+  /* border: 1px solid black; */
+  width: 100%;
+  height: 100%;
+
+  /* border-radius: 100%; */
+}
+
+.blockTitle h2 {
+  margin: 0;
+  padding: 1px;
+  text-align: center;
+  font-size: .8rem;
+  border-radius: var(--radius-hard);
+  text-transform: capitalize;
+  /* box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.25); */
+  padding: var(--spacing-s);
 }
 
 .block {
-  width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  border-radius: 7px;
-  background-color: snow;
-  color: black;
-  box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.25);
-  transform: perspective(25rem) rotateX(-25deg);
-  transition: var(--tran-short);
+  padding: var(--spacing-m);
+  /* border: 1px solid black; */
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1;
+
+  -webkit-box-orient: vertical;
+
+  -webkit-box-direction: normal;
+
+      -ms-flex-direction: column;
+
+          flex-direction: column;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.block:hover {
-  background-color: snow;
-  color: black;
-  box-shadow: 0px 0px 10px var(--plus);
-  transform: perspective(20em) rotateX(0deg);
-  transition: var(--tran-short);
+.block h2 {
+  font-size: 80%;
+  margin: 0;
+  padding: 0;
+  text-transform: capitalize;
 }
 
+.text {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: inherit;
+      -ms-flex-align: inherit;
+          align-items: inherit;
+}
+
+.block span {
+  border: 1px solid black;
+  border-radius: 10000px;
+  padding: 3px 5px;
+  font-size: 70%;
+}
 
 .block img {
-  height: 100%;
   width: 100%;
-  object-fit: cover;
-  border-radius: 0 0 7px 7px;
-}
-
-.project {
-  width: 70%;
-  aspect-ratio: 16/9;
-  display: flex;
-  flex-direction: column;
-  background-color: snow;
-  color: black;
-  box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.25);
-  transition: var(--tran-short);
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 7px;
-
 }
 
-.project:hover {
-  box-shadow: 0px 0px 10px var(--plus);
-  ;
-  transition: var(--tran-short);
+.about {
+  background-color: limegreen;
 }
 
-.project img {
-  border-radius: 7px;
+.dailyLife {
+  background-color: gold;
+}
+
+.connexions {
+  background-color: orangered;
+}
+
+
+.wip {
+  background-color: hotpink;
+}
+
+
+.still {
+  background-color: deepskyblue;
+}
+
+.finish {
+  background-color: chocolate;
 }
 
 /* -----------------------------------
@@ -522,8 +573,12 @@ SCREEN NIGHT
   position: fixed;
   z-index: 999;
   color: snow;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   display: none;
   font-size: 2rem;
 }
@@ -531,11 +586,15 @@ SCREEN NIGHT
 #screen-night p {
   border: 1px solid snow;
   border-radius: var(--radius-hard);
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   padding: 4px var(--spacing-s) 2px var(--spacing-s);
 }
 
 .itsnight {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
   display: flex !important;
 }
 
@@ -551,7 +610,9 @@ SCREEN NIGHT
   right: calc(50vw - 50vh) !important;
   position: fixed !important;
   max-width: 100vw !important;
-  transform: rotate(0deg) !important;
+  -webkit-transform: rotate(0deg) !important;
+      -ms-transform: rotate(0deg) !important;
+          transform: rotate(0deg) !important;
   top: 0;
   left: 0;
 
@@ -561,17 +622,24 @@ SCREEN NIGHT
 
 .secret {
   display: none;
-  box-shadow: 0px 3px 20px tomato;
+  -webkit-box-shadow: 0px 3px 20px tomato;
+          box-shadow: 0px 3px 20px tomato;
 }
 
 
 .hide {
   opacity: 0;
+  -webkit-transition: var(--tran-short);
+  -o-transition: var(--tran-short);
   transition: var(--tran-short);
 }
 
 .show {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
+  -webkit-transition: var(--tran-short);
+  -o-transition: var(--tran-short);
   transition: var(--tran-short);
 }
 
@@ -587,11 +655,14 @@ details {
   border: 1px dotted var(--plus);
   border-radius: 25px;
   padding: var(--spacing-s);
+  -webkit-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
   color: black;
   margin: var(--spacing-l);
   background: #fffafa47;
-  box-shadow: 0px 0px 20px hsla(0, 0%, 0%, 0.25);
+  -webkit-box-shadow: 0px 0px 20px hsla(0, 0%, 0%, 0.25);
+          box-shadow: 0px 0px 20px hsla(0, 0%, 0%, 0.25);
 }
 
 summary {
