--- a/cartography/assets/css/style.css
+++ b/cartography/assets/css/style.css
@@ -3,6 +3,7 @@
 
 :root {
   --transition-5: all ease-in-out .5s;
+  --transition-bk: background-image 1000ms linear;
 
   --spacing-xs: 3px;
   --spacing-s: 6px;
@@ -16,8 +17,8 @@
   --border-big: 14px;
   --border-full: 100%;
 
-  --color-blur-light: rgba(255, 255, 255, 0.5);
-  --color-blur-dark: rgba(0, 0, 0, 0.5);
+  --color-blur-light: rgba(255, 255, 255, 0.3);
+  --color-blur-dark: rgba(0, 0, 0, 0.3);
   --color-back: snow;
   --color-lines: #d3cce3;
 
@@ -99,12 +100,10 @@ a {
   transform-origin: center center;
   background-color: var(--color-blur-light);
   /* backdrop-filter: blur(20px); */
-
-
 }
 
 #carto:hover {
-  cursor: move;
+  cursor: grab;
 }
 
 .newBlock:hover,
@@ -148,43 +147,71 @@ a {
   background-size: cover;
   background-position: center;
 
-  background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);
+  background-image: radial-gradient(circle 500px at center, #a3a3a3 0%, #4c4c4c 100%);
+
+  transition: var(--transition-bk);
+}
+
+/* background-color: var(--color-blur-light); */
+
+.back0 {
+  background-image: radial-gradient(circle 500px at center, #a3a3a3 0%, #898989 100%);
+  transition: var(--transition-bk);
 }
 
 .back1 {
-  background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+  background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);
+  transition: var(--transition-bk);
 }
 
 .back2 {
   background-image: linear-gradient(to right, #eea2a2 0%, #bbc1bf 19%, #57c6e1 42%, #b49fda 79%, #7ac5d8 100%);
+  transition: var(--transition-bk);
 }
 
 .back3 {
   background-image: linear-gradient(to top, #c1dfc4 0%, #deecdd 100%);
+  transition: var(--transition-bk);
 }
+
 
 .back4 {
   background-image: linear-gradient(to top, #dbdcd7 0%, #dddcd7 24%, #e2c9cc 30%, #e7627d 46%, #b8235a 59%, #801357 71%, #3d1635 84%, #1c1a27 100%);
+  transition: var(--transition-bk);
 }
 
 .back5 {
   background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%);
+  transition: var(--transition-bk);
 }
-
 
 .back6 {
   background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+  transition: var(--transition-bk);
 }
 
 .back7 {
   background-image: linear-gradient(-60deg, #16a085 0%, #f4d03f 100%);
+  transition: var(--transition-bk);
 }
+
 
 .back8 {
   background-image: linear-gradient(to top, #3b41c5 0%, #a981bb 49%, #ffc8a9 100%);
+  transition: var(--transition-bk);
 }
 
 
+.blackScreen {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  background-color: black;
+
+}
 
 .welcoming {
   height: 100vh;
@@ -198,6 +225,8 @@ a {
   justify-content: center;
   z-index: 5;
   flex-direction: column;
+
+  color: var(--color-back);
 }
 
 .welcoming div {
@@ -214,24 +243,9 @@ h1 {
   margin: var(--spacing-m) auto var(--spacing-m) auto;
   line-height: 1.5;
   max-width: 750px;
-}
+  color: var(--color-back);
 
-.about {
-  height: 100vh;
-  width: 100vw;
-  width: 70%;
-  position: fixed;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  top: 0;
-  left: 0;
-  justify-content: center;
-  z-index: 5;
-  flex-direction: column;
-  display: none;
 }
-
 
 /* LISTE DES TAGS STARTS */
 .tagList {
@@ -427,24 +441,7 @@ button:hover {
   visibility: hidden;
 }
 
-.index {
-  width: 100%;
-  z-index: 99;
-  border-radius: var(--border-big);
-  background-color: var(--color-blur-dark);
-  backdrop-filter: blur(5px);
-  padding: var(--spacing-s);
-  height: fit-content;
-  overflow: scroll;
-  max-height: 50%;
-}
-
-.indexContent {
-  padding: var(--spacing-s);
-}
-
-.history {
-  z-index: 999;
+.side > div {
   border-radius: var(--border-big);
   background-color: var(--color-blur-dark);
   width: 100%;
@@ -452,6 +449,19 @@ button:hover {
   padding: var(--spacing-s);
   max-height: 40%;
   overflow: scroll;
+  color: var(--color-back);
+}
+
+.index {
+  max-height: 50%;
+}
+
+.indexContent, .about p {
+  padding: var(--spacing-s);
+}
+
+.history {
+  max-height: 40%;
 }
 
 .header {
@@ -468,6 +478,10 @@ button:hover {
   position: sticky;
   top: 0;
   backdrop-filter: blur(10px);
+}
+
+#dragzone:hover{
+  cursor: move;
 }
 
 .header h5 {
@@ -643,8 +657,9 @@ button:hover {
   cursor: pointer;
   z-index: 5;
   border: none;
-  background-color: var(--color-back);
-  ;
+  background-color: var(--color-blur-light);
+  backdrop-filter: blur(10px);
+  
   border-radius: var(--border-full);
   display: inline-flex;
   justify-content: center;
@@ -679,7 +694,7 @@ button:hover {
 
 
 .infoBlock {
-  background-color: var(--color-blur-light);
+  background-color: var(--color-blur-dark);
   padding: var(--spacing-m);
   border-radius: var(--border-big);
   padding-top: calc(184px + var(--space-info-block) * 2);
@@ -692,7 +707,7 @@ button:hover {
   width: 100%;
   font-size: 90%;
   backdrop-filter: blur(10px);
-  color: black;
+  color: var(--color-back);
 
   opacity: 0;
 }
@@ -757,6 +772,10 @@ tr:last-child {
 
 .appears {
   animation: appears 1s ease-in-out forwards;
+}
+
+.appearsLong {
+  animation: appears 2s ease-in-out forwards;
 }
 
 .disappearFast {
