--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ a:hover {
   cursor: ne-resize;
 }
 
-h3{
+h3 {
   margin: 7px;
   color: var(--highlight);
   text-align: center;
@@ -97,11 +97,11 @@ SCREEN HOME
   -webkit-transition: all .5s cubic-bezier(.55, 0, .07, 1);
   -o-transition: all .5s cubic-bezier(.55, 0, .07, 1);
   transition: all .5s cubic-bezier(.55, 0, .07, 1);
-  
+
   background-color: #fffafa69;
   -webkit-backdrop-filter: blur(30px) saturate(200%);
-          backdrop-filter: blur(30px) saturate(200%);
-background-color: #fffafa4a;
+  backdrop-filter: blur(30px) saturate(200%);
+  background-color: #fffafa4a;
 }
 
 .screen-up {
@@ -357,8 +357,8 @@ MAIL STUFF
   text-align: center;
   background-color: dodgerblue;
   -webkit-transform: translateY(-100%);
-      -ms-transform: translateY(-100%);
-          transform: translateY(-100%);
+  -ms-transform: translateY(-100%);
+  transform: translateY(-100%);
   position: relative;
   color: black;
   font-size: var(--font-normal);
@@ -367,10 +367,10 @@ MAIL STUFF
 
 .mailappear {
   -webkit-transform: translateY(0%) !important;
-      -ms-transform: translateY(0%) !important;
-          transform: translateY(0%) !important;
+  -ms-transform: translateY(0%) !important;
+  transform: translateY(0%) !important;
   -webkit-box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.5);
-          box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.5);
+  box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.5);
   -webkit-transition: all .5s ease-in-out;
   -o-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
@@ -378,8 +378,8 @@ MAIL STUFF
 
 .mailexit {
   -webkit-transform: translate(-50%, 80%);
-      -ms-transform: translate(-50%, 80%);
-          transform: translate(-50%, 80%);
+  -ms-transform: translate(-50%, 80%);
+  transform: translate(-50%, 80%);
   -webkit-transition: all .5s ease-in-out;
   -o-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
@@ -392,11 +392,11 @@ NOW
 
 ul {
   -webkit-padding-start: 20px;
-          padding-inline-start: 20px;
+  padding-inline-start: 20px;
   -webkit-margin-before: 5px;
-          margin-block-start: 5px;
+  margin-block-start: 5px;
   -webkit-margin-after: 20px;
-          margin-block-end: 20px;
+  margin-block-end: 20px;
 }
 
 h5 {
@@ -420,8 +420,8 @@ PROJETS HOME
 }
 
 .text a:hover {
-    cursor: ne-resize;
-    background-color: greenyellow;
+  cursor: ne-resize;
+  background-color: greenyellow;
 }
 
 .text a {
@@ -436,14 +436,15 @@ PROJETS HOME
 }
 
 .grid div {
-  -webkit-box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.5);
-          box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.5);
+  /* -webkit-box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.5);
+          box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.5); */
 }
 
-.grid>div:hover {
+.block a > .block {
   -webkit-box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.5);
-          box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.5);
+  box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.5);
   z-index: 99;
+  /* border-radius: 100%; */
 }
 
 .blockTitle {
@@ -452,14 +453,14 @@ PROJETS HOME
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   padding: var(--spacing-m);
   /* border: 1px solid black; */
   width: 100%;
@@ -467,6 +468,11 @@ PROJETS HOME
 
   /* border-radius: 100%; */
 }
+
+.blockTitle>h2>span {
+  transform: rotate(0deg);
+}
+
 
 .blockTitle h2 {
   margin: 0;
@@ -477,6 +483,8 @@ PROJETS HOME
   text-transform: capitalize;
   /* box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.25); */
   padding: var(--spacing-s);
+  display: flex;
+  gap: 8px;
 }
 
 .block {
@@ -493,16 +501,16 @@ PROJETS HOME
 
   -webkit-box-direction: normal;
 
-      -ms-flex-direction: column;
+  -ms-flex-direction: column;
 
-          flex-direction: column;
+  flex-direction: column;
   gap: 10px;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .block h2 {
@@ -514,11 +522,11 @@ PROJETS HOME
 
 .text {
   -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
+  -ms-flex-pack: start;
+  justify-content: start;
   -webkit-box-align: inherit;
-      -ms-flex-align: inherit;
-          align-items: inherit;
+  -ms-flex-align: inherit;
+  align-items: inherit;
 }
 
 .block span {
@@ -531,7 +539,7 @@ PROJETS HOME
 .block img {
   width: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border-radius: 7px;
 }
 
@@ -574,11 +582,11 @@ SCREEN NIGHT
   z-index: 999;
   color: snow;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   display: none;
   font-size: 2rem;
 }
@@ -611,8 +619,8 @@ SCREEN NIGHT
   position: fixed !important;
   max-width: 100vw !important;
   -webkit-transform: rotate(0deg) !important;
-      -ms-transform: rotate(0deg) !important;
-          transform: rotate(0deg) !important;
+  -ms-transform: rotate(0deg) !important;
+  transform: rotate(0deg) !important;
   top: 0;
   left: 0;
 
@@ -623,7 +631,7 @@ SCREEN NIGHT
 .secret {
   display: none;
   -webkit-box-shadow: 0px 3px 20px tomato;
-          box-shadow: 0px 3px 20px tomato;
+  box-shadow: 0px 3px 20px tomato;
 }
 
 
@@ -662,7 +670,7 @@ details {
   margin: var(--spacing-l);
   background: #fffafa47;
   -webkit-box-shadow: 0px 0px 20px hsla(0, 0%, 0%, 0.25);
-          box-shadow: 0px 0px 20px hsla(0, 0%, 0%, 0.25);
+  box-shadow: 0px 0px 20px hsla(0, 0%, 0%, 0.25);
 }
 
 summary {
