--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,9 @@ ul {
   display: block;
 }
 
+.secret{
+  display: none;
+}
 /* -----------------------------------
 Selector
 -------------------------------------- */
