--- a/cartography/assets/css/style.css
+++ b/cartography/assets/css/style.css
@@ -21,6 +21,7 @@
   --color-blur-dark: rgba(0, 0, 0, 0.3);
   --color-back: snow;
   --color-lines: #d3cce3;
+  --color-black: black;
 
   --shadow: 0 0 10px 0 rgb(0 0 0 / 25%);
   --anti-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.25) inset;
@@ -143,20 +144,30 @@ a {
   left: 0;
   z-index: -100;
 
+  opacity: 0.3;
+
   background-image: url(../img/about.png);
   background-size: cover;
   background-position: center;
 
-  background-image: radial-gradient(circle 500px at center, #a3a3a3 0%, #4c4c4c 100%);
+  background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);
 
   transition: var(--transition-bk);
 }
 
-/* background-color: var(--color-blur-light); */
 
-.back0 {
-  background-image: radial-gradient(circle 500px at center, #a3a3a3 0%, #898989 100%);
-  transition: var(--transition-bk);
+.animateWelcoming {
+  animation: enterWelcoming 3s ease-in-out forwards;
+}
+
+@keyframes enterWelcoming {
+  0% {
+    opacity: 0.3;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 .back1 {
@@ -226,7 +237,7 @@ a {
   z-index: 5;
   flex-direction: column;
 
-  color: var(--color-back);
+  color: var(--color-black);
 }
 
 .welcoming div {
@@ -243,8 +254,6 @@ h1 {
   margin: var(--spacing-m) auto var(--spacing-m) auto;
   line-height: 1.5;
   max-width: 750px;
-  color: var(--color-back);
-
 }
 
 /* LISTE DES TAGS STARTS */
@@ -383,6 +392,10 @@ h1 {
   justify-content: center;
 }
 
+.highlight {
+  box-shadow: 0 0 10px var(--color-lines);
+}
+
 .menu div img {
   height: 20px;
   aspect-ratio: 1;
@@ -406,22 +419,18 @@ h1 {
 }
 
 /* HISTORIQUE DES TAGS */
-button {
+button, .button {
   background-color: var(--color-back);
-  ;
+  color: var(--color-black);
   border-radius: var(--border-round);
   padding: var(--spacing-s) var(--spacing-m);
   width: fit-content;
   border: none;
-  /* box-shadow: var(--shadow); */
-
   display: inline-flex;
   align-items: center;
-  /*! justify-content: center; */
-  /*! justify-items: center; */
 }
 
-button:hover {
+button:hover,  .button:hover {
   cursor: pointer;
   box-shadow: var(--anti-shadow);
 }
@@ -432,7 +441,7 @@ button:hover {
   top: 0;
   left: 0;
   z-index: 999;
-  width: 300px;
+  width: 250px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -441,13 +450,13 @@ button:hover {
   visibility: hidden;
 }
 
-.side > div {
+.side>div {
   border-radius: var(--border-big);
   background-color: var(--color-blur-dark);
   width: 100%;
   backdrop-filter: blur(5px);
   padding: var(--spacing-s);
-  max-height: 40%;
+  max-height: 80%;
   overflow: scroll;
   color: var(--color-back);
 }
@@ -456,7 +465,8 @@ button:hover {
   max-height: 50%;
 }
 
-.indexContent, .about p {
+.indexContent,
+.about p {
   padding: var(--spacing-s);
 }
 
@@ -480,15 +490,15 @@ button:hover {
   backdrop-filter: blur(10px);
 }
 
-#dragzone:hover{
+/* .header:hover {
   cursor: move;
-}
+} */
 
 .header h5 {
   border-radius: var(--border-round);
-  padding: var(--spacing-m);
+  padding: var(--spacing-s);
   margin: 0;
-  height: 40px;
+  /* height: 40px; */
   width: 100%;
   display: flex;
   align-items: center;
@@ -513,12 +523,11 @@ button:hover {
 
 }
 
-.historyContent {
+#historyForm {
   color: var(--color-back);
   margin: var(--spacing-s);
   display: flex;
   flex-direction: column;
-  row-gap: var(--spacing-s);
   font-size: 80%;
 }
 
@@ -550,41 +559,117 @@ button:hover {
   opacity: 1;
 }
 
+form div {
+  display: flex;
+  justify-content: space-between;
+align-content: center;
+}
+
+form label {
+  text-overflow: ellipsis;
+overflow: hidden;
+white-space: nowrap;
+align-content: center;
+display: flex;
+align-items: center;
+width: 20px;
+justify-content: center;
+}
+
+.message {
+  color: var(--color-back);
+  display: flex;
+  flex-direction: column;
+  row-gap: var(--spacing-s);
+  height: 300px;
+  overflow: scroll;
+  margin-bottom: var(--spacing-s);
+}
+
+.sender {
+  display: block;
+  font-size: 85%;
+  padding-top: var(--spacing-s);
+  border-top: 1px solid var(--color-blur-light);
+  position: sticky;
+  bottom: var(--spacing-s);
+}
+
+.sender div {
+  margin-top: var(--spacing-s);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: var(--spacing-s);
+}
+
+.sender input {
+  width: inherit;
+  border: none;
+  border-radius: var(--border-small);
+  padding: var(--spacing-s);
+}
+
+.message div span {
+  max-width: 80%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.message input {
+  /*! visibility: hidden; */
+  display: none;
+}
+
+.message label span {
+  opacity: 0.3;
+}
+
+.message label span:hover {
+  background-color: green;
+}
+
+.message input[type="checkbox"]:checked + span {
+  opacity: 1
+}
+
 /* NO PROJECTS LEFT */
 .noProjectsLeft {
   position: fixed;
   top: var(--spacing-m);
-  left: 50dvw;
-
-  background-color: var(--color-back);
+  right: var(--spacing-m);
+  background-color: var(--color-blur-light);
   border-radius: var(--border-round);
   padding: var(--spacing-s) var(--spacing-m);
   width: fit-content;
   z-index: 999;
 
-  animation: enterTopDisapear 2.5s ease-out forwards;
+  animation: enterTopDisapear 4s ease-out forwards;
 }
 
 @keyframes enterTopDisapear {
   0% {
     opacity: 0;
-    transform: translate(-50%, -100%);
+    transform: translateY(-100%);
   }
 
-  100% {
+  20% {
     opacity: 1;
-    transform: translate(-50%, 0);
+    transform: translateY(0);
   }
 
-  /* 80% {
+  80% {
     opacity: 1;
+    transform: translateY(0);
   }
 
   100% {
     opacity: 0;
-    transform: translate(-50%, 0);
+    transform: translateY(-100%);
 
-  } */
+  }
 }
 
 .noProjectsLeft span {
@@ -659,7 +744,7 @@ button:hover {
   border: none;
   background-color: var(--color-blur-light);
   backdrop-filter: blur(10px);
-  
+
   border-radius: var(--border-full);
   display: inline-flex;
   justify-content: center;
@@ -694,7 +779,7 @@ button:hover {
 
 
 .infoBlock {
-  background-color: var(--color-blur-dark);
+  background-color: var(--color-back);
   padding: var(--spacing-m);
   border-radius: var(--border-big);
   padding-top: calc(184px + var(--space-info-block) * 2);
@@ -707,7 +792,7 @@ button:hover {
   width: 100%;
   font-size: 90%;
   backdrop-filter: blur(10px);
-  color: var(--color-back);
+  color: var(--color-black);
 
   opacity: 0;
 }
